[package]
name = "ferrodb"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/ferrodb-page",
    "crates/ferrodb-fs",
    "crates/ferrodb-util",
    "crates/ferrodb-protocol",
    "crates/ferrodb-client",
    "crates/ferrodb-server",
]

[dependencies]
anyhow = "1.0.51"
ferrodb-client = { path = "crates/ferrodb-client" }
ferrodb-protocol = { path = "crates/ferrodb-protocol" }
ferrodb-server = { path = "crates/ferrodb-server" }
ferrodb-util = { path = "crates/ferrodb-util" }
structopt = "0.3.25"
